@@ -210,6 +210,22 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
   </tr>
 
   <tr>
+    <td><img src="@IMAGES@openbsd-logo.png" alt="OpenBSD logo"></td>
+    <td>OpenBSD</td>
+    <td></td>
+    <td><b>Go
+	<a
+	   href="http://openbsd.dead-parrot.de/lilyport/">here</a>
+      </b>
+    </td>
+    <td>
+      2.4.5
+    </td>
+    <td><a href="mailto:kili@outback.escape.de">Matthias Kiliana
+    </a></td>
+  </tr>
+
+  <tr>
     <td><p align="center"><img src="@IMAGES@windows.png"></p></td>
     <td>MS Windows</td>
     <td>
