@@ -1,3 +1,7 @@
+2005-03-15  Pedro Kroger  <kroeger@pedrokroeger.net>
+
+	* site/download/index.html: Add OpenBSD.
+
 2005-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* newweb.css (a): increase border-spacing.
